# computational-intelligence-22-23

./: README.md  pyproject.toml
courses examples/: one_max.ipynb  rastrigin.ipynb
lab/lab1/: Laboratory.ipynb  README.md  pyproject.toml
lab1/: Labo_solution_greedy_inverted.ipynb  Laboratory.ipynb  README.md  laboratory1.ipynb  laboratory1_Optimization.ipynb
lab2/: lab1_set-covering.ipynb  lab2_set_covering.ipynb  one-max.ipynb  test-function.ipynb
