[tool.poetry]
name = "computational-intelligence"
version = "0.1.0"
description = ""
authors = ["Stanick Le Gal <stanick56@gmail.com>"]
readme = "README.md"
packages = [{include = "computational_intelligence"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
matplotlib = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
