[tool.poetry]
name = "computational-intelligence"
version = "0.1.0"
description = ""
authors = ["Stanick Le Gal <stanick56@gmail.com>"]
readme = "README.md"
packages = [{include = "computational_intelligence"}]

[tool.poetry.dependencies]
python = "^3.9"
black = {extras = ["jupyter"], version = "^22.6.0"}
jupyter = "^1.0.0"
matplotlib = "^3.5.3"
nero = {extras = ["jupyter"], version = "^1.0.20220202"}
networkx = "^2.8.5"
numpy = ">=1.23"
pandas = "^1.4.3"
pydot = "^1.4.2"
scipy = "^1.9.0"
seaborn = "^0.11.2"
toml = "^0.10.2"
tqdm = "^4.64.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
