[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["Stanick Le Gal <stanick56@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
matplotlib = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
